package com.clinic.domain.model.consultations;

public enum StatutRdv {
    EN_ATTENTE,
    CONFIRME,
    ANNULE,
    TERMINE,
}
