package com.clinic.domain.model.consultations;

public enum TypeRdv {
    CONSULTATION,
    VACCINATION,
    CHIRURGIE,
    CASTRATION,
}
